--- a/package.json
+++ b/package.json
@@ -4,19 +4,31 @@
     "description": "",
     "main": "src/index.js",
     "scripts": {
+        "beautiful": "lint-staged",
         "start": "nodemon --inspect src/index.js",
         "watch": "node-sass --watch src/resources/scss/ --output src/public/css",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "duytran710",
     "license": "ISC",
+    "lint-staged": {
+        "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all --tab-width 4 --write"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
     "dependencies": {
         "express": "^4.18.2",
         "express-handlebars": "^7.1.1"
     },
     "devDependencies": {
+        "husky": "^8.0.3",
+        "lint-staged": "^13.2.3",
         "morgan": "^1.10.0",
         "node-sass": "^9.0.0",
-        "nodemon": "^3.0.1"
+        "nodemon": "^3.0.1",
+        "prettier": "^3.0.1"
     }
 }
