--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     },
     "dependencies": {
         "express": "^4.18.2",
-        "express-handlebars": "^7.1.1"
+        "express-handlebars": "^7.1.1",
+        "mongoose": "^7.4.3"
     },
     "devDependencies": {
         "husky": "^8.0.3",
